--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "knex": "node --no-warnings --loader tsx ./node_modules/knex/bin/cli.js",
     "dev": "tsx watch src/server.ts ",
     "lint": "eslint src --ext .ts --fix",
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@types/supertest": "^2.0.12",
     "eslint": "^8.33.0",
     "supertest": "^6.3.3",
+    "tsup": "^6.6.3",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5",
     "vitest": "^0.28.5"
